<resources>
    <string name="app_name">Моя погода</string>
    <string name="weather_with_space">%1$d %2$s</string>
    <string name="weather_without_space">%1$d%2$s</string>
    <string name="humidity">%1$d%%</string>
    <string name="pressure">%1$d мм рт.ст.</string>
    <string name="temperature">%1$d°</string>

    <string name="city_pref_key">city</string>
    <string name="temp_unit_pref_key">tempUnit</string>
    <string name="wind_unit_pref_key">windUnit</string>

    <string name="current_weather">Текущая погода</string>
    <string name="hourly_weather">Почасовой прогноз</string>
    <string name="daily_weather">Прогноз на %1$d дней</string>
    <string name="settings_header">Настройки</string>
    <string name="location_title">Местоположение</string>
    <string name="city_title">Город</string>
    <string name="city_summary">Выберите ваш город</string>
    <string name="city_dialog_title">Выбор города</string>
    <string name="units_title">Единицы измерения</string>
    <string name="temp_title">Температура</string>
    <string name="temp_summary">Градусы Цельсия или Фаренгейта</string>
    <string name="temp_dialog_title">Единицы измерения температуры</string>
    <string name="wind_title">Скорость ветра</string>
    <string name="wind_summary">м/с или км/ч</string>
    <string name="wind_dialog_title">Единицы измерения скорости ветра</string>
    <string name="feels_like">Ощущается как:</string>
</resources>