<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_sky"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.activities.MainActivity">

        <!-- Шапка с городом и кнопкой настроек -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:textColor="@color/primary_text"
                    tools:text="Москва"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSettings"
                    style="@style/IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    app:icon="@drawable/ic_settings"
                    app:iconTint="@color/primary_text"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/weatherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_weather"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/block_title"
                android:layout_marginBottom="8dp"/>

            <!-- Текущая погода -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="12dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <!-- Текущая температура -->
                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="72sp"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/primary_text"
                            android:includeFontPadding="false"
                            tools:text="+24°"/>

                        <ImageView
                            android:id="@+id/ivCurrentWeather"
                            android:layout_width="82dp"
                            android:layout_height="82dp"
                            android:scaleType="fitXY"
                            tools:src="@drawable/ic_clear_day"/>

                    </LinearLayout>

                    <!-- Описание погоды -->
                    <TextView
                        android:id="@+id/tvWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/secondary_text"
                        android:layout_marginBottom="3dp"
                        tools:text="Солнечно"/>

                    <!-- Ощущается как -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feels_like"
                            android:textSize="14sp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/secondary_text"/>

                        <TextView
                            android:id="@+id/tvApparentTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primary_text"
                            tools:text="+22°"/>

                    </LinearLayout>

                    <!-- Влажность -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="6dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_humidity"
                            app:tint="@color/secondary_text" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primary_text"
                            tools:text="65%"/>
                    </LinearLayout>

                    <!-- Ветер -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="6dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_wind"
                            app:tint="@color/secondary_text" />


                        <TextView
                            android:id="@+id/tvWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primary_text"
                            tools:text="3 м/с"/>
                    </LinearLayout>

                    <!-- Давление -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="6dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_pressure"
                            app:tint="@color/secondary_text" />


                        <TextView
                            android:id="@+id/tvPressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="16sp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primary_text"
                            tools:text="750 мм рт.ст."/>
                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hourly_weather"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/block_title"
                android:layout_marginBottom="8dp"/>

            <!-- Почасовая погода -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_marginBottom="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourlyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hourly_weather"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDailyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/block_title"
                android:layout_marginBottom="8dp"/>

            <!-- Ежедневная погода -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dailyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_daily_weather"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- Блок ошибки -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/errorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardBackgroundColor="@color/error_background"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/error_text"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>